Fixes CSS issue where forgot password on login is displayed left aligned. Now centered.

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -6,7 +6,8 @@ main.user_sessions {
 
 .login-bkg-box {
 background-image: url("boats.jpg");
-opacity: 0.7;
+// background: rgba(255,255,255,0.2);
+// opacity: 0.7;
 // background-color: rgba(0, 0, 0, 0.6);
 // background-color: #100f3e;
 background-size: cover;
@@ -14,18 +15,27 @@ height: 600px;
 padding-top: 120px;
 }
 
+
+.login-bkg-box:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(255,255,255,0.5);
+}
+
 .log-in-page-text {
-   color: white;
+  color: white;
+  text-align: center;
 }
 
 
-h1 {
-    text-align: center;
-}
 
 form {
 
-  text-align: center;
+  // text-align: center;
 }
 
 
